--- a/templates/likes_player.html
+++ b/templates/likes_player.html
@@ -550,6 +550,6 @@
   </script>
 
   <!-- Load specialized virtual player -->
-  <script src="/static/player-virtual.js"></script>
+  <script type="module" src="/static/player-virtual.js"></script>
 </body>
 </html> 
